<resources>
    <string name="app_name">Verificator CNP</string>

    <string name="str_letter_V">V</string>
    <string name="str_letter_e">e</string>
    <string name="str_letter_r_1">r</string>
    <string name="str_letter_i_1">i</string>
    <string name="str_letter_f">f</string>
    <string name="str_letter_i_2">i</string>
    <string name="str_letter_c">c</string>
    <string name="str_letter_a">a</string>
    <string name="str_letter_t">t</string>
    <string name="str_letter_o">o</string>
    <string name="str_letter_r_2">r</string>

    <string name="str_letter_cnp_C">C</string>
    <string name="str_letter_cnp_N">N</string>
    <string name="str_letter_cnp_P">P</string>

    <string name="str_by_Stufflex">by Stufflex</string>

    <string name="str_introduceti_cnp">Introduceți CNP-ul</string>
    <string name="str_informatii">Informații</string>
    <string name="str_de_retinut">De reținut</string>

    <string name="str_hint_sexul">S</string>
    <string name="str_hint_anul">AA</string>
    <string name="str_hint_luna">LL</string>
    <string name="str_hint_ziua">ZZ</string>
    <string name="str_hint_judetul">JJ</string>
    <string name="str_hint_numar_secvential">NNN</string>
    <string name="str_hint_cifra_de_control">C</string>

    <string name="str_question_mark">"\?"</string>
    <string name="str_exclamation_mark">!</string>
    <string name="str_information_sign">!</string>
    <string name="str_important_sign">!</string>

    <string name="str_verifica">Verifică</string>
    <string name="str_verifica_semn">✔</string>
    <string name="str_arrow_down">↓</string>
    <string name="str_x_semn">⨯</string>

    <string name="str_shower">🚿</string>
    <string name="str_home">🇷🇴</string>

    <string name="str_reimprospatare">Reîmprospătare</string>
    <string name="str_restart">Restart</string>

    <string name="str_tooltip_sexul">Sexul</string>
    <string name="str_tooltip_anul">Ultimele două cifre din anul nașterii</string>
    <string name="str_tooltip_luna">Luna nașterii</string>
    <string name="str_tooltip_ziua">Ziua nașterii</string>
    <string name="str_tooltip_judet">Județul sau sectorul nașterii</string>
    <string name="str_tooltip_numar_secvential">Număr secvențial</string>
    <string name="str_tooltip_cifra_de_control">Cifra de control</string>
    <string name="str_tooltip_important">Important</string>

    <string name="str_arrow_horizontal_sexul">Sexul</string>
    <string name="str_arrow_horizontal_anul">Anul nașterii</string>
    <string name="str_arrow_horizontal_luna">Luna nașterii</string>
    <string name="str_arrow_horizontal_ziua">Ziua nașterii</string>
    <string name="str_arrow_horizontal_judetul">Județul (sectorul) nașterii</string>
    <string name="str_arrow_horizontal_numar_secvential">Numărul secvențial</string>
    <string name="str_arrow_horizontal_cifra_de_control">Cifra de control</string>

    <string name="string_baby">👶</string>
    <string name="string_sunglasses">😎</string>
    <string name="string_monocle">🧐</string>


</resources>