<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationSignActivity"
    android:id="@+id/mainLayout"
    android:background="@drawable/main_layout_white"
    android:clickable="true"
    >
    <!-- BEGIN helpers -->
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <!-- END helpers -->

    <!-- BEGIN texts -->
    <TextView
        android:id="@+id/txt_informatii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_informatii"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:background="@drawable/btn_title"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_1" />

    <!-- END texts -->

    <!-- BEGIN buttons -->
    <Button
        android:id="@+id/btn_information_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_gray_light"
        android:gravity="center"
        android:text="@string/str_information_sign"
        android:rotation="180"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:transitionName="informationTransition"
        android:onClick="GoToMainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sexul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_sexul"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:tooltipText="@string/str_tooltip_sexul"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_anul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_anul"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_anul"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_4"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <Button
        android:id="@+id/btn_luna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_luna"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:tooltipText="@string/str_tooltip_luna"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_3"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_ziua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_ziua"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_ziua"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_6"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_4"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <Button
        android:id="@+id/btn_judetul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_judetul"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_judet"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_7"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_numar_secvential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_numar_secvential"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_numar_secvential"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_6"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <Button
        android:id="@+id/btn_cifra_de_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_hint_cifra_de_control"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_cifra_de_control"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_7"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_verificare"
        android:text="@string/str_important_sign"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:tooltipText="@string/str_tooltip_important"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_7" />

    <!-- END buttons -->




</android.support.constraint.ConstraintLayout>